--- a/style.css
+++ b/style.css
@@ -1,10 +1,22 @@
+body{
+    font-family: Roboto,Arial;
+    background-color: rgb(214, 214, 214);
+    color: black;
+    margin: 15px;
+}
 .title-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: rgb(58, 49, 49);
+  background-color: rgb(156, 156, 156);
+  justify-content: center;
 }
-
+.title-text{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .game-icon {
   width: 60px;
   margin-right: 15px;
@@ -13,12 +25,10 @@
 .title-text h1 {
   margin: 0;
   font-size: 30px;
-  color: #fff;
 }
 
 .subtitle {
-  font-size: 1em;
-  color: #ccc;
+  font-size: 19px;
 }
 
 /* Center Sudoku heading */
@@ -42,8 +52,8 @@
   justify-content: center;
   margin: 20px auto;
   padding: 10px;
-  background-color: rgb(0, 0, 0);
-  border: 4px solid #555;
+  background-color: rgb(156, 156, 156);;
+  border: 4px solid rgb(122, 122, 122);
   box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
 }
 
@@ -104,7 +114,7 @@ button:hover {
 
 /* Specific Buttons */
 button.check-solution {
-  background-color: #e99f3e;
+  background-color: #e07f00;
 }
 button.new-game {
   background-color: #928049;
