--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ body{
   padding: 10px;
   background-color: rgb(156, 156, 156);;
   border: 4px solid rgb(122, 122, 122);
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.2);
 }
 
 .cell {
@@ -68,14 +67,9 @@ body{
   outline: none;
 }
 
-/* 3x3 grid borders */
-.cell:nth-child(3n) {
-  border-right: 2px solid #000;
-}
-
 .sudoku-container > .cell:nth-child(n+19):nth-child(-n+27),
 .sudoku-container > .cell:nth-child(n+46):nth-child(-n+54) {
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid rgb(53, 53, 53);
 }
 
 /* Highlight filled & empty */
@@ -124,6 +118,10 @@ button.reset-btn {
 }
 button.reset-stats {
   background-color: #3f5161;
+}
+
+.score_text{
+  color: rgb(116, 116, 116);
 }
 
 /* Responsive */
